Adding pattern sliding window problems

--- a/1. Pattern Sliding Window/Problem Challenge 2 - String Anagrams.ipynb
+++ b/1. Pattern Sliding Window/Problem Challenge 2 - String Anagrams.ipynb
@@ -29,6 +29,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Time Complexity: O(N + M)\n",
+    "where 'N' and 'M' are the number of char in the input string and the pattern respectively.\n",
+    "\n",
+    "Space Complexity: O(M)\n",
+    "Since in the worst case, the whole pattern can have istinct char which will go into the HashMap.\n",
+    "In the worstcase,we alos need 0(N) aspace for ther esultlist, this wil happen when the pattern has only on char and the string contains only that char.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
