--- a/2. Pattern Two Pointers/Pair with Target Sum.ipynb
+++ b/2. Pattern Two Pointers/Pair with Target Sum.ipynb
@@ -21,7 +21,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "def find_target_sum(arr, target):\n",
@@ -40,7 +44,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -62,18 +70,6 @@
    "display_name": "vmlimpl",
    "language": "python",
    "name": "vmlimpl"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
