Adding Pattern merge prroblems

--- a/3. Fast and Slow Pointers/Problem Challenge 1 - Palindrome LinkedList (medoum).ipynb
+++ b/3. Fast and Slow Pointers/Problem Challenge 1 - Palindrome LinkedList (medoum).ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,22 +40,47 @@
     "        fast = fast.next.next\n",
     "        slow = slow.next\n",
     "\n",
-    "        if fast == slow:\n",
+    "    end = reverse_LinkedList(slow)\n",
+    "    copy_end = end\n",
+    "\n",
+    "    while head.next is not None and end.next is not None:\n",
+    "        if head.value != end.value:\n",
     "            return False\n",
-    "    \n",
-    "    return True"
+    "            \n",
+    "        head = head.next\n",
+    "        end = end.next\n",
+    "\n",
+    "    reverse_LinkedList(copy_end) # revert the reverse of the second half\n",
+    "    return True\n",
+    "\n",
+    "def reverse_LinkedList(head):\n",
+    "    former, latter = None, head\n",
+    "    temp = None\n",
+    "    while latter:\n",
+    "        temp = latter\n",
+    "        latter = latter.next\n",
+    "        temp.next = former\n",
+    "        former = temp\n",
+    "    return temp\n",
+    "\n",
+    "def print_LinkedList(head):\n",
+    "    printl = head\n",
+    "    while printl is not None:\n",
+    "        print(printl.value, end=' ')\n",
+    "    print()\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Is linkedlist palindrome True\n"
+      "Is linkedlist palindrome False\n"
      ]
     }
    ],
