Addding cycle sort pattern

--- a/4. Pattern Merge Intervals/Merge Intervals (medium(.ipynb
+++ b/4. Pattern Merge Intervals/Merge Intervals (medium(.ipynb
@@ -30,8 +30,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Time complexity**: `O(N * logN)` \\\n",
+    "The timecomplexity of the above algorithm is `O(N * logN)`, where `N` is the total number of intervals.\\\n",
+    "We are interating the intervalsonly once which will take `O(N)`,in the beginning through, since we need to sort the intervals,our algorithm will take `O(N * logN)`.\n",
+    "\n",
+    "**Space complexity**: `O(N)` \\\n",
+    "The space complexity of the above algorithm will be `O(N)` as we need to return a list containing all the merged intervals.\\\n",
+    "We will also need `O(N)` space for sorting."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
      "languageId": "python"
@@ -45,7 +58,7 @@
     "        self.end = end\n",
     "    \n",
     "    def print_inteval(self):\n",
-    "        print(f\"[{self.start},{self.end}]\")\n",
+    "        print(f\"[{self.start},{self.end}]\",end='')\n",
     "\n",
     "def find_merged_intervals(intervals):\n",
     "    if len(intervals) < 2:\n",
@@ -63,15 +76,36 @@
     "        if end <= interval.start: # overlapping interval adjust the end\n",
     "            end = max(end, interval.end)\n",
     "        else: # non-overlapping interval adjust the previous interval and reset\n",
-    "            mergedIntervals.add(start, end)\n",
+    "            mergedIntervals.append(Interval(start, end))\n",
     "            start = interval.start\n",
     "            end = interval.end\n",
     "    \n",
     "    # add the last interval\n",
     "    mergedIntervals.append(Interval(start, end))\n",
-    "    return mergedIntervals\n",
-    "        \n",
-    "\n"
+    "    return mergedIntervals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1,4][2,9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in find_merged_intervals([Interval(1, 4), Interval(2, 5), Interval(7,9)]):\n",
+    "    i.print_inteval()\n",
+    "print()"
    ]
   }
  ],
