--- a/4. Pattern Merge Intervals/Insert Interval (medium).ipynb
+++ b/4. Pattern Merge Intervals/Insert Interval (medium).ipynb
@@ -26,7 +26,11 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "def insert(intervals, new_interval):\n",
@@ -57,7 +61,11 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -77,18 +85,6 @@
    "display_name": "vmlimpl",
    "language": "python",
    "name": "vmlimpl"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
