--- a/neetcode/Array and Hashing/Contains Duplicate.ipynb
+++ b/neetcode/Array and Hashing/Contains Duplicate.ipynb
@@ -11,7 +11,11 @@
     "```\n",
     "Example 1:\n",
     "Input: nums = [1,2,3,1]\n",
-    "Outout: True"
+    "Outout: True\n",
+    "```\n",
+    "\n",
+    "Time complexity: O(n) \\\n",
+    "Auxiliary Space: O(n)"
    ]
   },
   {
