--- a/neetcode/Array and Hashing/Two Pointer/Three Sum (medium).ipynb
+++ b/neetcode/Array and Hashing/Two Pointer/Three Sum (medium).ipynb
@@ -20,7 +20,8 @@
     "    [-1, 0, 1],\n",
     "    [-1, -1, 2]\n",
     "]\n",
-    "```"
+    "```\n",
+    "*Time complexity* :`n^2`"
    ]
   },
   {
