--- a/neetcode/Array and Hashing/Two Pointer/42. Tapping Rain water Problem (hard).ipynb
+++ b/neetcode/Array and Hashing/Two Pointer/42. Tapping Rain water Problem (hard).ipynb
@@ -4,62 +4,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Leet Code 11: Container with most water (similar to tapping rain water)\n",
-    "Given `n` non nevatibe integer where eache represent a point at coordinate . `n` vertical lines are drawn \\\n",
-    "such that the two endpoints of the `(i, ai) and (i, 0)`. Find two lines, which, together with the x=axis forms a container, such that container contins most water \n",
+    "### Leet Code 42. Tapping rain water problem\n",
+    "\n",
+    "Given n non-negative interers representing an elevation map where the width of each bar is 1, \\\n",
+    "compute how much water it can trap after raining.\n",
     "\n",
     "```\n",
-    "Input: height = [1,8,6,2,5,4,8,3,7]\n",
-    "Output : 49\n",
-    "Explanation: The above vertical lines are represented by array [1_8_6_2_5_4_8_3_7]. In this case the max are of water the container is 49 i.e, 8 * 7\n",
+    "Example 1:\n",
+    "Input: height = [0,1,0,2,1,0,1,3,2,1,2,1]\n",
+    "Output: 6\n",
+    "Explanation: The above elevation map (black section) is representedby array [0,1,0,2,1,0,1,3,2,1].In this case, 6units of rain water (blue section) are been trapped.\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import annotations\n",
     "\n",
     "class Soluation:\n",
-    "    def maxWaterArea(self, arr: List[int]) -> int:\n",
-    "        n = len(arr)\n",
-    "        maxArea = 0\n",
-    "        left, right = 0, n-1\n",
+    "    def tappingRainWater(self, height: List[int]):\n",
+    "        left, right = 0, len(height)-1\n",
+    "        leftMax, rightMax = height[left], height[right]\n",
+    "        \n",
+    "        result = 0\n",
     "\n",
     "        while left < right:\n",
-    "            height = min(arr[left], arr[right])\n",
-    "            width = right - left \n",
-    "            maxArea = max(maxArea, height * width)\n",
-    "            if arr[left] < arr[right]:\n",
+    "            if leftMax < rightMax:\n",
     "                left += 1\n",
-    "            else: \n",
+    "                leftMax = max(leftMax, height[left])\n",
+    "                result += leftMax - height[left]\n",
+    "            else:\n",
     "                right -= 1\n",
-    "        \n",
-    "        return maxArea       "
+    "                rightMax = max(rightMax, height[right])\n",
+    "                result += rightMax - height[right]\n",
+    "\n",
+    "        return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "49"
+       "6"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "soluation = Soluation()\n",
-    "soluation.maxWaterArea(arr=[1,8,6,2,5,4,8,3,7])"
+    "soluation.tappingRainWater(height=[0,1,0,2,1,0,1,3,2,1,2,1])\n"
    ]
   }
  ],
