--- a/Machine Learning/Natural Language Processing/EncoderDecoder.ipynb
+++ b/Machine Learning/Natural Language Processing/EncoderDecoder.ipynb
@@ -21,10 +21,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.8.10 ('vmlimpl')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.8.10"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "7626a37170bde8cbd07d8d30684bdff5f1c1a26dbdf249b53898a22fb9c20fab"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
