Adding new neetcode

--- a/1. Pattern Sliding Window/Longest Subarray with Ones after Repleacement.ipynb
+++ b/1. Pattern Sliding Window/Longest Subarray with Ones after Repleacement.ipynb
@@ -15,11 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def find_longest_subarr_with_one_rep(arr, k):\n",
@@ -44,11 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -68,6 +60,10 @@
    "display_name": "vmlimpl",
    "language": "python",
    "name": "vmlimpl"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
