Adding heap problems

--- a/3. Fast and Slow Pointers/LinkedList Cycle (easy).ipynb
+++ b/3. Fast and Slow Pointers/LinkedList Cycle (easy).ipynb
@@ -23,11 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Node:\n",
@@ -51,11 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -98,11 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Node:\n",
@@ -136,11 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -168,6 +152,10 @@
    "display_name": "vmlimpl",
    "language": "python",
    "name": "vmlimpl"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
