--- a/9. Two Heap/Find the Median of a Number Stream (medium).ipynb
+++ b/9. Two Heap/Find the Median of a Number Stream (medium).ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
     "\n",
     "    def insert_num(self, num):\n",
     "        if not self.maxHeap or -self.maxHeap[0] >= num:\n",
-    "            heapq.heappush(self.maxHeap, -num)\n",
+    "            heapq.heappush(self.maxHeap, -num) # python doesn't have max heap. so we are using -num in a min heap\n",
     "        else:\n",
     "            heapq.heappush(self.minHeap, num)\n",
     "        print(len(self.maxHeap), len(self.minHeap))\n",
