--- a/10. Patterns Subsets/Subsets (easy).ipynb
+++ b/10. Patterns Subsets/Subsets (easy).ipynb
@@ -21,11 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def subsets(arr):\n",
@@ -43,11 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def findsubset(arr):\n",
@@ -69,11 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -105,6 +93,10 @@
    "display_name": "vmlimpl",
    "language": "python",
    "name": "vmlimpl"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
