--- a/Python - Data Structures/Tree/Tree Traversals.ipynb
+++ b/Python - Data Structures/Tree/Tree Traversals.ipynb
@@ -20,11 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Node:\n",
@@ -42,11 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Driver code\n",
@@ -60,11 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -97,11 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def preorder(root):\n",
@@ -114,11 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -151,11 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def postorder(root):\n",
@@ -168,11 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -202,11 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def tree_size(root):\n",
@@ -221,11 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -252,11 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
@@ -273,11 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -304,11 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def find_key(root, key):\n",
@@ -325,11 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -359,11 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def height(root):\n",
@@ -378,11 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -402,6 +342,10 @@
    "display_name": "vmlimpl",
    "language": "python",
    "name": "vmlimpl"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
