Adding interview questions

--- a/4. Pattern Merge Intervals/Merge Intervals (medium(.ipynb
+++ b/4. Pattern Merge Intervals/Merge Intervals (medium(.ipynb
@@ -45,11 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Interval:\n",
@@ -88,11 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -114,6 +106,10 @@
    "display_name": "vmlimpl",
    "language": "python",
    "name": "vmlimpl"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
