Adding uber interview

--- a/4. Pattern Merge Intervals/Insert Interval (medium).ipynb
+++ b/4. Pattern Merge Intervals/Insert Interval (medium).ipynb
@@ -26,11 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def insert(intervals, new_interval):\n",
@@ -61,11 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -85,6 +77,10 @@
    "display_name": "vmlimpl",
    "language": "python",
    "name": "vmlimpl"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
